<resources>
    <string name="app_name">furnitureSergei</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_kitchen">Kitchen</string>
    <string name="title_youth">Youth Furniture</string>
    <string name="title_garden">Garden</string>
    <string name="title_hallway">Hallway</string>
    <string name="title_sale">Discounts</string>
    <string name="title_description">Product details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>